bugfix for displaying in fixed position on mobile

--- a/app/assets/stylesheets/cookies_eu.scss
+++ b/app/assets/stylesheets/cookies_eu.scss
@@ -43,7 +43,6 @@
 
 @media (max-width: 767px){
   .cookies-eu{
-    position: static;
     font-size: 12px;
     line-height: 20px;
     .cookies-eu-content-holder{
